--- a/resume.tex
+++ b/resume.tex
@@ -37,15 +37,13 @@
 
 \begin{rSection}{Education}
 
-{\bf University of Wisconsin-Madison}, Madison WI \hfill {\em September 2017 - Present} 
+{\bf University of Wisconsin-Madison}, Madison WI \hfill {\em September 2017 - December 2019 (estimated)} 
 \\ M.S. Computer Science
 \\ Department of Computer Sciences\\
 
-\\{\bf Bowdoin College}, Brunswick ME \hfill {\em September 2013 - May 2017} 
+{\bf Bowdoin College}, Brunswick ME \hfill {\em September 2013 - May 2017} 
 \\ B.A. Computer Science.\hfill { Cum Laude | }
 Minor in Music \smallskip \\
-
-
 \end{rSection}
 
 %% \begin{rSection}{Carrier Objective}
@@ -57,15 +55,17 @@ Minor in Music \smallskip \\
 %-----------------------------------------------------------------------------------------------
 \begin{rSection}{Work Experience}
 {\bf Teaching Assistant}, University of Wisconsin-Madison \hfill {\em September 2017 - Present} 
-\\Teaching assistant for CS200 - Introduction to Computer Science, a 600+ student course at UW-Madison taught in Java. Responsibilities include: Teach weekly lab sections, design and implement homework assignments, creation of an automated grading tool to grade hundreds of students' participation scores, grade student projects, hold weekly office hours. 4+ semesters of experience. \\
+\\\texttt{CS200} (4 semesters) - Introduction to Computer Science, a 600+ student course at UW-Madison taught in Java. Responsibilities include: Teach weekly lab sections, design and implement homework assignments, creation of an automated grading tool to grade hundreds of students' participation scores, grade student projects, hold weekly office hours. \\
+---\\
+\texttt{CS300} (1 semester) - Programming II, taught in the summer on the campus of Epic Systems. Responsibilities include: Hold weekly office hours to help students on weekly programming assignments. Grading of exams. Creation of automated test suites to grade weekly programming assignments in Java. Proctor midterms and final exam. 
 
-\\{\bf Teaching Assistant}, Bowdoin College \hfill {\em September 2014 - May 2017}\\
+{\bf Teaching Assistant}, Bowdoin College \hfill {\em September 2014 - May 2017}\\
 Hold weekly office hours to assist students. Communicate regularly with professors to ensure students are receiving help and problem areas are addressed. Also employed as a grader and private tutor of poroblem sets and programming assignments for Data Structures, AI, and Introduction to Computer Science. \\
 
-\\{\bf Cognitive Computing Intern}, IBM \hfill {\em Summer 2016} \\
+{\bf Cognitive Computing Intern}, IBM \hfill {\em Summer 2016} \\
 Worked in a team to apply machine learning to derive insights from customer data\\
 
-\\{\bf Summer Research Fellow}, Bowdoin College \hfill {\em Summer 2015 - Fall 2016}\\
+{\bf Summer Research Fellow}, Bowdoin College \hfill {\em Summer 2015 - Fall 2016}\\
 Awarded a grant to design and implement an interactive music system in Max/MSP/Jitter. Backend written in C++.
 
 \end{rSection}
@@ -79,6 +79,7 @@ Awarded a grant to design and implement an interactive music system in Max/MSP/J
 Programming Languages \ & Java, Python, C++, C, Swift \\
 Software \& Tools & Emacs, Latex, MS Office \\
 \end{tabular}
+\end{rSection}
 
 \begin{rSection}{Academic Awards}
 \item Cum Laude, Bowdoin College
@@ -86,8 +87,8 @@ Software \& Tools & Emacs, Latex, MS Office \\
 \item Awarded Kibbe Fellowship for summer research
 \end{rSection}
 
-\begin{rSection}{Non-Academic Interests}
-  Passionate about fitness, video games, and Japanese cars from the 90s
-\end{rSection}
+%% \begin{rSection}{Non-Academic Interests}
+%%   Passionate about fitness, video games, and Japanese cars from the 90s
+%% \end{rSection}
 
 \end{document}
