add Unix skill and style/proofreading fixes

--- a/resume.tex
+++ b/resume.tex
@@ -7,7 +7,7 @@
 % http://www.LaTeXTemplates.com
 %
 % Original author:
-% Rishi Shah 
+% Rishi Shah
 %
 % Important note:
 % This template requires the resume.cls file to be in the same directory as the
@@ -37,11 +37,11 @@
 
 \begin{rSection}{Education}
 
-{\bf University of Wisconsin-Madison}, Madison WI \hfill {\em September 2017 - December 2019 (estimated)} 
+{\bf University of Wisconsin-Madison}, Madison WI \hfill {\em September 2017 - December 2019 (estimated)}
 \\ M.S. Computer Science
 \\ Department of Computer Sciences\\
 
-{\bf Bowdoin College}, Brunswick ME \hfill {\em September 2013 - May 2017} 
+{\bf Bowdoin College}, Brunswick ME \hfill {\em September 2013 - May 2017}
 \\ B.A. Computer Science.\hfill { Cum Laude | }
 Minor in Music \smallskip \\
 \end{rSection}
@@ -54,13 +54,13 @@ Minor in Music \smallskip \\
 %    Projects And Seminars
 %-----------------------------------------------------------------------------------------------
 \begin{rSection}{Work Experience}
-{\bf Teaching Assistant}, University of Wisconsin-Madison \hfill {\em September 2017 - Present} 
+{\bf Teaching Assistant}, University of Wisconsin-Madison \hfill {\em September 2017 - Present}
 \\\texttt{CS200} (4 semesters) - Introduction to Computer Science, a 600+ student course at UW-Madison taught in Java. Responsibilities include: Teach weekly lab sections, design and implement homework assignments, creation of an automated grading tool to grade hundreds of students' participation scores, grade student projects, hold weekly office hours. \\
 ---\\
-\texttt{CS300} (1 semester) - Programming II, taught in the summer on the campus of Epic Systems. Responsibilities include: Hold weekly office hours to help students on weekly programming assignments. Grading of exams. Creation of automated test suites to grade weekly programming assignments in Java. Proctor midterms and final exam. 
+\texttt{CS300} (1 semester) - Programming II, taught in the summer on the campus of Epic Systems. Responsibilities include: Hold weekly office hours to help students on weekly programming assignments. Grading of exams. Creation of automated test suites to grade weekly programming assignments in Java. Proctor midterms and final exam.
 
 {\bf Teaching Assistant}, Bowdoin College \hfill {\em September 2014 - May 2017}\\
-Hold weekly office hours to assist students. Communicate regularly with professors to ensure students are receiving help and problem areas are addressed. Also employed as a grader and private tutor of poroblem sets and programming assignments for Data Structures, AI, and Introduction to Computer Science. \\
+Hold weekly office hours to assist students. Communicate regularly with professors to ensure students are receiving help and problem areas are addressed. Also employed as a grader and private tutor of problem sets and programming assignments for Data Structures, AI, and Introduction to Computer Science. \\
 
 {\bf Cognitive Computing Intern}, IBM \hfill {\em Summer 2016} \\
 Worked in a team to apply machine learning to derive insights from customer data\\
@@ -77,7 +77,7 @@ Awarded a grant to design and implement an interactive music system in Max/MSP/J
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming Languages \ & Java, Python, C++, C, Swift \\
-Software \& Tools & Emacs, Latex, MS Office \\
+Software \& Tools & Unix, Emacs, \LaTeX, MS Office \\
 \end{tabular}
 \end{rSection}
 
