--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{John ``Jack'' Truskowski} % Your name
-\address{1010 E Washington Ave, Madison WI, 53703} % Your address
+\address{1010 E Washington Ave \#601, Madison WI, 53703} % Your address
 \address{(203)837-6494 \\ jtruskow@gmail.com} % Your phone number and email
 
 \begin{document}
